--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -164,7 +164,7 @@ the accuracy of the testing.</p>
 
 <img src="/assets/img/Def_Data.JPG" alt="Train Images" width="400px" height="200px" />
 
-<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo"></p>
+<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px"></p>
 
 <h2 id="overview">2.  Network Architect</h2>
 
@@ -175,6 +175,8 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 <!--
 This part is for the encoder
   -->
+
+<h3 id="overview">2.1  Encoder Architect</h3>
 
 <table style="width:100%">
   <tr>
@@ -238,7 +240,7 @@ This part is for the encoder
   <!--
 This part is for the decoder
 -->
-
+<h3 id="overview">2.1  Encoder Architect</h3>
 
 
 
