--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -184,12 +184,28 @@ This part is for the encoder
     <td>IN</td>
     <td>OUT</td>
     <td>KERNEL</td>
+    <td>STRIDE</td>
   </tr>
   <tr>
-    <td>OUR METHOD (PRINT)</td>
-    <td>0.22</td>
-    <td>0.82</td>
-    <td>0.35</td>
+    <td>CONV2D</td>
+    <td>3</td>
+    <td>3</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D</td>
+    <td>3</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
     <td>OUR METHOD (CRACK)</td>
