--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -179,6 +179,7 @@ This part is for the encoder
 <h3 id="overview">2.1  Encoder Architect</h3>
 
 <table style="width:100%">
+  <caption style="caption-side:bottom">My savings</caption>
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
