--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -140,8 +140,7 @@ and Decoder. </p>
 <p>In order to be able to compare our results with those already published, we need to have a standard accuracy method. First off, we need to know the concept of True and Predicted conditions. Two types of correct predictions (True Positives and True Negatives), and there are two types of errors. Error Type I for any observation predicted positive when it is negative (False Positive, also called False Alert). Error Type II for any observation predicted negative when it is positive (False Negative).
  </p>
 
-
-<td><img src="/assets/img/True Positive.ppm" alt="iqubes" width="400px" height="200px" /></td>
+<p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px"></p>
 
 
 <h2 id="overview">2.  Dataset</h2>
@@ -151,7 +150,7 @@ to <a href="https://www.semanticscholar.org/paper/The-MVTec-Anomaly-Detection-Da
 2021</a>,this data set contained
 several different groups of images such as Bottles, Cables, Capsule, Carpet, Grid, Hazelnut, Leather, Metal Nut,
 Pill, Screw, Tile, Toothbrush, Transistor, Wood and Zipper.
-Due to the limitation, we were able only to train one of the data sets for our project. We used the Hazelnut dataset, which contained 390 defect-free images. Deep neural networks are known for their impressive accuracy when trained with a large dataset. Therefore we used data augmentation to increase the number of data samples 
+Due to the limitation, we were able only to train one of the data sets for our project. We used the Hazelnut dataset, which contained 390 defect-free images. Deep neural networks are known for their impressive accuracy when trained with a large dataset. Therefore we used <strong>data</strong> augmentation to increase the number of data samples 
 we have. We used rotation, flipping and
 adding noise to increase the data samples. In the
 end, we had approximately 2000 images. There are 70 test
