--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -207,49 +207,100 @@ This part is for the encoder
     <td></td>
     <td></td>
   </tr>
-  <tr>
-    <td>OUR METHOD (CRACK)</td>
-    <td>0.26</td>
-    <td>0.57</td>
-    <td>0.36</td>
+<tr>
+
+    <td>CONV2D</td>
+    <td>3</td>
+    <td>32</td>
+    <td>4</td>
+    <td>2</td>
   </tr>
   <tr>
-    <td>OUR METHOD (CUT)</td>
-    <td>0.69</td>
-    <td>0.8</td>
-    <td>0.57</td>
+    <td>BATCHNORM2D</td>
+    <td>32</td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td>OUR METHOD (HOLE)</td>
-    <td>0.55</td>
-    <td>0.61</td>
-    <td>0.75</td>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+
+
+<tr>
+    <td>CONV2D</td>
+    <td>32</td>
+    <td>32</td>
+    <td>4</td>
+    <td>2</td>
   </tr>
   <tr>
-    <td>AE(SSIM)</td>
-    <td>0.08</td>
-    <td><strong>1</strong></td>
-    <td>0.15</td>
+    <td>BATCHNORM2D</td>
+    <td>32</td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td><strong>AE(L2)</strong></td>
-    <td>0.84</td>
-    <td>0.93</td>
-    <td><strong>0.88</strong></td>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
-  <tr>
-    <td>ANOGAN</td>
-    <td>0.16</td>
-    <td>0.83</td>
-    <td>0.27</td>
-  </tr>
-  <tr>
-    <td>CNN FEATURE DICTIONARY</td>
-    <td>0.07</td>
-    <td>0.9</td>
-    <td>0.13</td>
-  </tr>
+
   
+<tr>
+    <td>CONV2D</td>
+    <td>32</td>
+    <td>32</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D</td>
+    <td>32</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+
+
+  <tr>
+    <td>CONV2D</td>
+    <td>32</td>
+    <td>64</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D</td>
+    <td>64</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+
+
+
 </table>
 
 
