--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -299,7 +299,89 @@ This part is for the encoder
     <td></td>
   </tr>
 
+<tr>
+    <td>CONV2D</td>
+    <td>64</td>
+    <td>64</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D</td>
+    <td>64</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>LEAKYRELU</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
 
+<tr>
+    <td>CONV2D</td>
+    <td>64</td>
+    <td>128</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D, LEAKYRELU</td>
+    <td>128</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+ 
+
+<tr>
+    <td>CONV2D</td>
+    <td>128</td>
+    <td>64</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D, LEAKYRELU</td>
+    <td>64</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+
+
+  <tr>
+    <td>CONV2D</td>
+    <td>64</td>
+    <td>32</td>
+    <td>4</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D, LEAKYRELU</td>
+    <td>32</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+
+<tr>
+    <td>CONV2D</td>
+    <td>32</td>
+    <td>500</td>
+    <td>8</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>BATCHNORM2D</td>
+    <td>500</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
 
 </table>
 
