--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -130,6 +130,8 @@ the middle that contains the latent representation of the input
 data. Auto-Encoders have two main parts called, Encoder
 and Decoder. </p>
 
+<p style="text-align:center;"><img src="/assets/img/Auto-Encoder.png" alt="Auto-Encoder model" width="400px" height="200px"></p>
+
 <ul>
   <li>Encoder: Accepts high-dimensional input data and translates it to latent low-dimensional data. The input size of an Encoder network is larger than its output size.</li>
   <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The Decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size.</li>
@@ -158,8 +160,11 @@ images which different types, such as crack, cut, hole and
 print. The dataset also includes ground Truth to calculate
 the accuracy of the testing.</p>
 
-<td><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" /></td>
+<h3>2.1 Train Images</h3>
 
+<img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" />
+
+<h3>2.1 Train Images</h3>
 
 <img src="/assets/img/Def_Data.JPG" alt="Train Images" width="400px" height="200px" />
 
