--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -199,21 +199,14 @@ This part is for the encoder
     <td>2</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>3</td>
     <td></td>
     <td></td>
     <td></td>
   </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-<tr>
 
+<tr>
     <td>CONV2D</td>
     <td>3</td>
     <td>32</td>
@@ -221,15 +214,8 @@ This part is for the encoder
     <td>2</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>32</td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
@@ -244,42 +230,28 @@ This part is for the encoder
     <td>2</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>32</td>
     <td></td>
     <td></td>
     <td></td>
   </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-
   
 <tr>
     <td>CONV2D</td>
     <td>32</td>
     <td>32</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
+    <td>1</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>32</td>
     <td></td>
     <td></td>
     <td></td>
   </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
+
 
 
   <tr>
@@ -290,15 +262,8 @@ This part is for the encoder
     <td>2</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>64</td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
@@ -308,19 +273,12 @@ This part is for the encoder
     <td>CONV2D</td>
     <td>64</td>
     <td>64</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
+    <td>1</td>
   </tr>
   <tr>
-    <td>BATCHNORM2D</td>
+    <td>BATCHNORM2D, LEAKYRELU</td>
     <td>64</td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>LEAKYRELU</td>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
