--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -304,8 +304,8 @@ This part is for the encoder
     <td>CONV2D</td>
     <td>128</td>
     <td>64</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
+    <td>1</td>
   </tr>
   <tr>
     <td>BATCHNORM2D, LEAKYRELU</td>
@@ -320,8 +320,8 @@ This part is for the encoder
     <td>CONV2D</td>
     <td>64</td>
     <td>32</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
+    <td>1</td>
   </tr>
   <tr>
     <td>BATCHNORM2D, LEAKYRELU</td>
@@ -352,7 +352,8 @@ This part is for the encoder
   <!--
 This part is for the decoder
 -->
-<h3 id="overview">2.1  Encoder Architect</h3>
+<h3 id="overview">2.1  Decoder Architect</h3>
+<h4 id="overview">2.1  Decoder Architect</h4>
 
 
 
