--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -142,8 +142,12 @@ and Decoder. </p>
 <p>In order to be able to compare our results with those already published, we need to have a standard accuracy method. First off, we need to know the concept of True and Predicted conditions. Two types of correct predictions (True Positives and True Negatives), and there are two types of errors. Error Type I for any observation predicted positive when it is negative (False Positive, also called False Alert). Error Type II for any observation predicted negative when it is positive (False Negative).
  </p>
 
-<p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px"></p>
 
+
+<figure>
+  <p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px"></p>
+  <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+</figure>
 
 <h2 id="overview">2.  Dataset</h2>
 
