--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -166,6 +166,8 @@ the accuracy of the testing.</p>
 
 <h4>2.1 Train Images</h4>
 
+For training, we have 390 fine images of hazelnuts. look at figure 1.
+
 <img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" />
 
 <h4>2.1 Train Images</h4>
