--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -140,8 +140,9 @@ and Decoder. </p>
 
 
 <figure>
-  <p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px"></p>
+  <p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px">
   <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+  </p>
 </figure>
 
 <h2 id="overview">2.  Dataset</h2>
@@ -599,8 +600,6 @@ outperforms the AE(SSIM) approach.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
 
-
-<iframe width="560" height="315" src="/assets/img/True Positive.ppm" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
 
 
   </div>
