--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -354,6 +354,7 @@ This part is for the decoder
 
 <h4 id="overview">2.1  Decoder Architect</h4>
 
+<p style="text-align:center;">
 <table style="width:100%">
   <caption style="caption-side:bottom">My savings</caption>
   <tr>
@@ -488,6 +489,7 @@ This part is for the decoder
     <td>2</td>
   </tr>
 </table>
+</p>
 
 
 
