--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -491,6 +491,11 @@ This part is for the decoder
 </table>
 </p>
 
+<xmp>
+<div>
+  <input placeholder='write something' value='test'>
+</div>
+</xmp>
 
 <h2 id="more-information"> Discussions</h2>
 
