--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -354,9 +354,10 @@ This part is for the decoder
 
 <h4 id="overview">2.1  Decoder Architect</h4>
 
-<p style="text-align:center;">
+
 <table style="width:100%">
-  <caption style="caption-side:bottom">My savings</caption>
+  <p style="text-align:center;">
+  <caption style="caption-side:bottom">My savings</caption></p>
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -489,7 +490,7 @@ This part is for the decoder
     <td>2</td>
   </tr>
 </table>
-</p>
+
 
 <xmp>
 <div>
