--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -162,9 +162,11 @@ the accuracy of the testing.</p>
 
 <h4>2.1 Train Images</h4>
 
-For training, we have 390 fine images of hazelnuts. look at figure 1.
+For training, we have 390 fine images of hazelnuts. look at figure <a href="#good_image">1</a>.
 
-<img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" />
+
+
+<img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" />
 
 <h4>2.1 Train Images</h4>
 
