--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -166,13 +166,11 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 
 
 
-<img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" />
+<p style="text-align:center;"><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" /></p>
 
-<h4>2.1 Train Images</h4>
+<h4>2.1 Test Images</h4>
 
-<img src="/assets/img/Def_Data.JPG" alt="Train Images" width="400px" height="200px" />
-
-<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px"></p>
+<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px" id="bad_image"></p>
 
 <h2 id="overview">2.  Network Architect</h2>
 
