--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -152,7 +152,7 @@ to <a href="https://www.semanticscholar.org/paper/The-MVTec-Anomaly-Detection-Da
 2021</a>,this data set contained
 several different groups of images such as Bottles, Cables, Capsule, Carpet, Grid, Hazelnut, Leather, Metal Nut,
 Pill, Screw, Tile, Toothbrush, Transistor, Wood and Zipper.
-Due to the limitation, we were able only to train one of the data sets for our project. We used the Hazelnut dataset, which contained 390 defect-free images. Deep neural networks are known for their impressive accuracy when trained with a large dataset. Therefore we used <strong>data</strong> augmentation to increase the number of data samples 
+Due to the limitation, we were able only to train one of the data sets for our project. We used the Hazelnut dataset, which contained 390 defect-free images. Deep neural networks are known for their impressive accuracy when trained with a large dataset. Therefore we used <strong>data augmentation</strong> to increase the number of data samples 
 we have. We used rotation, flipping and
 adding noise to increase the data samples. In the
 end, we had approximately 2000 images. There are 70 test
@@ -165,10 +165,11 @@ the accuracy of the testing.</p>
 For training, we have 390 fine images of hazelnuts. look at figure <a href="#good_image">1</a>.
 
 
-
 <p style="text-align:center;"><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" /></p>
 
 <h4>2.1 Test Images</h4>
+
+There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#good_image">2</a> shows some samples of these test images.
 
 <p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px" id="bad_image"></p>
 
