--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -173,7 +173,7 @@ There are 4 different testing sets, including print, crack, cut, and hole. Figur
 
 <p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px" id="bad_image"></p>
 
-<h2 id="overview">2.  Network Architect</h2>
+<h2 id="overview">3.  Network Architect</h2>
 
 Our model had two main parts the Encoder and the Decoder. Each one had several convolutional layers followed by Batch-Normalization with 0.1 momentum and ϵ = 10−6
 . For the activation function, we used the LeakyReLU with negative slope 0.01.
@@ -183,7 +183,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 This part is for the encoder
   -->
 
-<h4 id="overview">2.1  Encoder Architect</h4>
+<h4 id="overview">3.1  Encoder Architect</h4>
 
 <table style="width:100%">
   <caption style="caption-side:bottom">My savings</caption>
@@ -353,7 +353,7 @@ This part is for the encoder
 This part is for the decoder
 -->
 
-<h4 id="overview">2.1  Decoder Architect</h4>
+<h4 id="overview">3.2  Decoder Architect</h4>
 
 
 <table style="width:100%">
@@ -499,16 +499,16 @@ This part is for the decoder
 </div>
 </xmp>
 
-<h2 id="more-information"> Discussions</h2>
+<h2 id="more-information">4. Discussions</h2>
 
-<h4 id="more-information">  Effect of Threshold</h4>
+<h4 id="more-information">4.1  Effect of Threshold</h4>
 
 
 <p>In the last part, we are going to compare our results with other
 methods and approaches that are out there.
 </p>
 
-<h4 id="more-information"> Effect of Latent Space size</h4>
+<h4 id="more-information">4.2 Effect of Latent Space size</h4>
 
 
 <p>In the last part, we are going to compare our results with other
