--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -165,11 +165,22 @@ the accuracy of the testing.</p>
 For training, we have 390 fine images of hazelnuts. look at figure <a href="#good_image">1</a>.
 
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Good_Data.JPG" height="31px" width="200px" />
+    <div class="caption">Some caption text</div>
+</div>
+
+.caption {
+    width: 200px;
+    text-align: center;
+}
+
+
 <p style="text-align:center;"><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" /></p>
 
 <h4>2.1 Test Images</h4>
 
-There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#good_image">2</a> shows some samples of these test images.
+There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#bad_image">2</a> shows some samples of these test images.
 
 <p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px" id="bad_image"></p>
 
