--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -141,7 +141,7 @@ and Decoder. </p>
 
 <figure>
   <p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px">
-  <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+  <figcaption text-align= "center">Fig.1 - Trulli, Puglia, Italy.</figcaption>
   </p>
 </figure>
 
