--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -166,7 +166,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Good_Data.JPG" height="31px" width="200px" />
+    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" />
     <div class="caption">Some caption text</div>
 </div>
 
