--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -138,12 +138,11 @@ and Decoder. </p>
  </p>
 
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/True Positive.ppm" width="400px" height="200px" />
+    <!-- <div class="caption">Some caption text</div> -->
+</div>
 
-<figure>
-  <p style="text-align:center;"><img src="/assets/img/True Positive.ppm" alt="Predicted and Actual table" width="400px" height="200px">
-  <figcaption text-align= "center">Fig.1 - Trulli, Puglia, Italy.</figcaption>
-  </p>
-</figure>
 
 <h2 id="overview">2.  Dataset</h2>
 
