--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -367,10 +367,9 @@ This part is for the decoder
 
 <h4 id="overview">3.2  Decoder Architect</h4>
 
-
+<div style="align: left; text-align:center;">
 <table style="width:100%">
-  <p style="text-align:center;">
-  <caption style="caption-side:bottom">My savings</caption></p>
+  <caption style="caption-side:bottom">My savings</caption>
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -503,6 +502,7 @@ This part is for the decoder
     <td>2</td>
   </tr>
 </table>
+</div>
 
 
 <xmp>
