--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -140,7 +140,7 @@ and Decoder. </p>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/True Positive.ppm" width="400px" height="200px" />
-    <!-- <div class="caption">Some caption text</div> -->
+    <div class="caption">Figure 1</div>
 </div>
 
 
@@ -166,7 +166,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" />
-    <div class="caption">Some caption text</div>
+    <div class="caption">Figure 2</div>
 </div>
 <!-- 
 .caption {
@@ -175,13 +175,18 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 } -->
 
 
-<p style="text-align:center;"><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" /></p>
+<!-- <p style="text-align:center;"><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" id="good_image" /></p> -->
 
 <h4>2.1 Test Images</h4>
 
 There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#bad_image">2</a> shows some samples of these test images.
 
-<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo" width="400px" height="200px" id="bad_image"></p>
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Def_Data.JPG" width="400px" height="200px" id="bad_image" />
+    <div class="caption">Figure 3</div>
+</div>
+
+
 
 <h2 id="overview">3.  Network Architect</h2>
 
