--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -165,7 +165,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" />
+    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" id="good_image"/>
     <div class="caption">Figure 2</div>
 </div>
 <!-- 
