--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -366,6 +366,23 @@ This part is for the encoder
   </tr>
 </table>
 
+
+
+
+<table>
+  <caption style="caption-side:bottom">My savings</caption>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+  </tr>
+  <tr>
+    <td>January</td>
+    <td>$100</td>
+  </tr>
+</table>
+
+
+
   <!--
 This part is for the decoder
 -->
