--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
   <h1 class="pb-3 title text-left font-weight-bold">Amin Fadaeinejad</h1>
   <h6 class="m-0 mb-2" style="font-size: 0.83em;"></h6>
   
-      <h6 class="m-0 mb-2" style="font-size: 0.83em;"><a href="https://www.google.com/maps/place/Googleplex/@37.4220656,-122.0862837,17z/data=!3m1!4b1!4m5!3m4!1s0x808fba02425dad8f:0x6c296c66619367e0!8m2!3d37.4220656!4d-122.0840897" class="page-description" target="_blank">York University, Ontario, CA </a></h6>
+      <h6 class="m-0 mb-2" style="font-size: 0.83em;">Toronto, Ontario, CA</h6>
+
+      <!-- <h6 class="m-0 mb-2" style="font-size: 0.83em;"><a href="https://www.google.com/maps/place/Googleplex/@37.4220656,-122.0862837,17z/data=!3m1!4b1!4m5!3m4!1s0x808fba02425dad8f:0x6c296c66619367e0!8m2!3d37.4220656!4d-122.0840897" class="page-description" target="_blank">Toronto, Ontario, CA </a></h6> -->
   
 </div>
 
