--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -125,7 +125,12 @@ the middle that contains the latent representation of the input
 data. Auto-Encoders have two main parts called, Encoder
 and Decoder. </p>
 
-<p style="text-align:center;"><img src="/assets/img/Auto-Encoder.png" alt="Auto-Encoder model" width="400px" height="200px"></p>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Auto-Encoder.png" width="400px" height="200px" />
+    <div class="caption" id="figure1" >Figure 2</div>
+</div>
+
 
 <ul>
   <li>Encoder: Accepts high-dimensional input data and translates it to latent low-dimensional data. The input size of an Encoder network is larger than its output size.</li>
@@ -140,7 +145,7 @@ and Decoder. </p>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/True Positive.ppm" width="400px" height="200px" />
-    <div class="caption">Figure 1</div>
+    <div class="caption" id="figure1" >Figure 2</div>
 </div>
 
 
@@ -161,11 +166,11 @@ the accuracy of the testing.</p>
 
 <h4>2.1 Train Images</h4>
 
-For training, we have 390 fine images of hazelnuts. look at figure <a href="#good_image">1</a>.
+For training, we have 390 fine images of hazelnuts. look at figure <a href="#figure3">3</a>.
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" id="good_image"/>
+    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" id="figure3"/>
     <div class="caption">Figure 2</div>
 </div>
 
@@ -174,10 +179,10 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#goo
 
 <h4>2.1 Test Images</h4>
 
-There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#bad_image">2</a> shows some samples of these test images.
+There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#figure4">4</a> shows some samples of these test images.
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Def_Data.JPG" width="400px" height="200px" id="bad_image" />
+    <img src="/assets/img/Def_Data.JPG" width="400px" height="200px" id="figure4" />
     <div class="caption">Figure 3</div>
 </div>
 
