--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -128,7 +128,7 @@ and Decoder. </p>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Auto-Encoder.png" width="400px" height="200px" />
-    <div class="caption" id="figure1" >Figure 2</div>
+    <div class="caption" id="figure1" >Figure 1</div>
 </div>
 
 
@@ -144,8 +144,8 @@ and Decoder. </p>
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/True Positive.ppm" width="400px" height="200px" />
-    <div class="caption" id="figure1" >Figure 2</div>
+    <img src="/assets/img/True Positive.ppm" width="400px" height="200px"  id="figure2" />
+    <div class="caption" >Figure 2</div>
 </div>
 
 
@@ -171,7 +171,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#fig
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" id="figure3"/>
-    <div class="caption">Figure 2</div>
+    <div class="caption">Figure 3</div>
 </div>
 
 
@@ -179,14 +179,14 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#fig
 
 <h4>2.1 Test Images</h4>
 
-There are 4 different testing sets, including print, crack, cut, and hole. Figure <a href="#figure4">4</a> shows some samples of these test images.
+There are 4 different testing sets, including crack, cut, hole, and print. Figure <a href="#figure4">4</a> shows some samples of these test images.
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Def_Data.JPG" width="400px" height="200px" id="figure4" />
-    <div class="caption">Figure 3</div>
+    <div class="caption">Figure 4</div>
 </div>
 
-
+Additional to the defective images, we have the segmentation of the defective region of the images.
 
 <h2 id="overview">3.  Network Architect</h2>
 
