--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -367,7 +367,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 
 
 <table>
-  <caption style="caption-side:bottom">My savings</caption>
+  <caption style="caption-side:bottom text-align: center" >My savings</caption>
   <tr>
     <th>Month</th>
     <th>Savings</th>
