--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -351,10 +351,9 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 </table>
 
 
-
-
+<div style="align: left; text-align:center;">
 <table>
-  <caption style="caption-side:bottom text-align: center" >My savings</caption>
+  <caption style="caption-side:bottom" >My savings</caption>
   <tr>
     <th>Month</th>
     <th>Savings</th>
@@ -364,6 +363,9 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
     <td>$100</td>
   </tr>
 </table>
+</div>
+
+
 
 
 
@@ -585,7 +587,7 @@ methods and approaches that are out there.
   </tr>
   <tr>
     <td><strong>AE(L2)</strong></td>
-    <td>0.84</td>
+    <td><strong>0.84</strong></td>
     <td>0.93</td>
     <td><strong>0.88</strong></td>
   </tr>
