--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -198,6 +198,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 
 <h4 id="overview">3.1  Encoder Architect</h4>
 
+<a href=""> Table 1 shows each layer and its dimensions for the Encoder.</a>
 
 <table style="width:100%">
   <caption style="caption-side:bottom">My savings</caption>
@@ -383,6 +384,8 @@ This part is for the decoder
 -->
 
 <h4 id="overview">3.2  Decoder Architect</h4>
+
+<a href=""> Table 2 shows each layer and its dimensions for the Dencoder.</a>
 
 <div style="align: left; text-align:center;">
 <table style="width:100%">
