--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -352,7 +352,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 </table>
 
 <table>
-    <caption>He-Man and Skeletor facts</caption>
+
     <tr>
         <td> </td>
         <th scope="col" class="heman">He-Man</th>
@@ -374,6 +374,8 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
         <td>Cries at romcoms</td>
     </tr>
 </table>
+<center> Testing</center>
+
 
 
 
