--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -198,10 +198,9 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 
 <h4 id="overview">3.1  Encoder Architect</h4>
 
-<a href=""> Table 1 shows each layer and its dimensions for the Encoder.</a>
+<a href=""> Table 1</a> shows each layer and its dimensions for the Encoder.
 
 <table style="width:100%">
-  <caption style="caption-side:bottom">My savings</caption>
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -350,6 +349,8 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
     <td></td>
   </tr>
 </table>
+<center> Testing</center>
+
 
 <table>
 
@@ -387,7 +388,7 @@ This part is for the decoder
 
 <h4 id="overview">3.2  Decoder Architect</h4>
 
-<a href=""> Table 2 shows each layer and its dimensions for the Dencoder.</a>
+<a href=""> Table 2</a> shows each layer and its dimensions for the Dencoder.
 
 <div style="align: left; text-align:center;">
 <table style="width:100%">
@@ -532,6 +533,16 @@ This part is for the decoder
   <input placeholder='write something' value='test'>
 </div>
 </xmp>
+
+
+
+<h2 id="more-information">4. Experiments</h2>
+
+<h4 id="more-information">4.1  Training</h4>
+
+The model has been trained over the mentioned dataset for 1000 epochs. We used 
+
+
 
 <h2 id="more-information">4. Discussions</h2>
 
