--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -198,7 +198,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 
 <h4 id="overview">3.1  Encoder Architect</h4>
 
-<a href=""> Table 1</a> shows each layer and its dimensions for the Encoder.
+<a href="#table1"> Table 1</a> shows each layer and its dimensions for the Encoder.
 
 <table style="width:100%">
   <tr>
@@ -349,7 +349,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
     <td></td>
   </tr>
 </table>
-<center> Testing</center>
+<center id="table1"> Table 1</center>
 
 
 <table>
@@ -375,7 +375,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
         <td>Cries at romcoms</td>
     </tr>
 </table>
-<center> Testing</center>
+
 
 
 
@@ -388,11 +388,9 @@ This part is for the decoder
 
 <h4 id="overview">3.2  Decoder Architect</h4>
 
-<a href=""> Table 2</a> shows each layer and its dimensions for the Dencoder.
+<a href="#table2"> Table 2</a> shows each layer and its dimensions for the Dencoder.
 
-<div style="align: left; text-align:center;">
 <table style="width:100%">
-  <caption style="caption-side:bottom">My savings</caption>
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -525,8 +523,7 @@ This part is for the decoder
     <td>2</td>
   </tr>
 </table>
-</div>
-
+<center id="table2"> Table 2</center>
 
 <xmp>
 <div>
