--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -540,6 +540,8 @@ This part is for the decoder
 The model has been trained over the mentioned dataset for 1000 epochs. We used 
 
 
+<h4 id="more-information">4.1  Outputs</h4>
+
 
 <h2 id="more-information">4. Discussions</h2>
 
