--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -537,7 +537,7 @@ This part is for the decoder
 
 <h4 id="more-information">4.1  Training</h4>
 
-The model has been trained over the mentioned dataset for 1000 epochs. We used 
+The model has been trained over the mentioned dataset for 1000 epochs. We used the ``L2`` loss
 
 
 <h4 id="more-information">4.1  Outputs</h4>
