--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -200,7 +200,7 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
 
 <a href="#table1"> Table 1</a> shows each layer and its dimensions for the Encoder.
 
-<table style="width:100%">
+<table style="width:100%" id="table1">
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -349,32 +349,8 @@ Our model had two main parts the Encoder and the Decoder. Each one had several c
     <td></td>
   </tr>
 </table>
-<center id="table1"> Table 1</center>
+<center > Table 1</center>
 
-
-<table>
-
-    <tr>
-        <td> </td>
-        <th scope="col" class="heman">He-Man</th>
-        <th scope="col" class="skeletor">Skeletor</th>
-    </tr>
-    <tr>
-        <th scope="row">Role</th>
-        <td>Hero</td>
-        <td>Villain</td>
-    </tr>
-    <tr>
-        <th scope="row">Weapon</th>
-        <td>Power Sword</td>
-        <td>Havoc Staff</td>
-    </tr>
-    <tr>
-        <th scope="row">Dark secret</th>
-        <td>Expert florist</td>
-        <td>Cries at romcoms</td>
-    </tr>
-</table>
 
 
 
@@ -390,7 +366,7 @@ This part is for the decoder
 
 <a href="#table2"> Table 2</a> shows each layer and its dimensions for the Dencoder.
 
-<table style="width:100%">
+<table style="width:100%" id="table2">
   <tr>
     <td>LAYER TYPE</td>
     <td>IN</td>
@@ -523,7 +499,7 @@ This part is for the decoder
     <td>2</td>
   </tr>
 </table>
-<center id="table2"> Table 2</center>
+<center > Table 2</center>
 
 <xmp>
 <div>
