--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -513,7 +513,12 @@ This part is for the decoder
 
 <h4 id="more-information">4.1  Training</h4>
 
-The model has been trained over the mentioned dataset for 1000 epochs. We used the ``L2`` loss
+The model has been trained over the mentioned dataset for 1000 epochs. We used the ``L2`` loss for training our network using the ADAM optimizer. Figure <a href="figure5">5</a> shows the the loss for each step (each epoch has approximately 63 steps).
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Training_loss.JPG" width="400px" height="200px" id="figure5"/>
+    <div class="caption">Figure 5</div>
+</div>
 
 
 <h4 id="more-information">4.1  Outputs</h4>
