--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -520,6 +520,12 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
     <div class="caption">Figure 5</div>
 </div>
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/4-F1.JPG" width="400px" height="200px" id="figure6"/>
+    <div class="caption">Figure 6</div>
+</div>
+
+
 
 <h4 id="more-information">4.1  Outputs</h4>
 
