--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -516,7 +516,7 @@ This part is for the decoder
 The model has been trained over the mentioned dataset for 1000 epochs. We used the ``L2`` loss for training our network using the ADAM optimizer. Figure <a href="figure5">5</a> shows the loss for each step (each epoch has approximately 63 steps).
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Training_loss.JPG" id="figure5"/>
+    <img src="/assets/img/Training_loss.JPG" id="figure5" width= "400px"  height="auto" />
     <div class="caption">Figure 5</div>
 </div>
 
